modified class and padding

--- a/src/scss/object/project/_home.scss
+++ b/src/scss/object/project/_home.scss
@@ -555,7 +555,7 @@
   margin-bottom: 100px;
 }
 
-.p-top-project__pieItem__category {
+.p-top-project__PCpieItem__category { // 12/4　class名修正
   display: flex;
   justify-content: center;
   align-items: center;
@@ -717,7 +717,7 @@
   @include mq('u-pc') {
     width: 95%;
     margin: 0 auto;
-    padding-bottom: 150px;
+    padding-bottom: 120px; // 12/4 150px → 120pxに変更
   }
 }
 
@@ -1118,6 +1118,8 @@
   //     transform: scale(1.05);
   //   }
   // }
+
+
 }
 
 .p-top-entry__mask {
