Modified footer to add contact form link

--- a/src/ejs/template/_footer.ejs
+++ b/src/ejs/template/_footer.ejs
@@ -7,16 +7,26 @@
   </div>
   <div class="c-footerPC-corporate">
     <a class="c-footerPC-corporate__link" href="https://trust-c-osaka.com/" target="_blank" rel="noopener noreferrer">
-      <img src="<%= img_path %>img_ttj_banner.png" class="c-footerPC-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
-      <p class="c-footerPC-corporate__linkText">トラストコーポレーション</p>
+      <img src="<%= img_path %>img_ttj_banner.png" alt="footerのコーポレートサイトのイメージ">
+      <p class="c-footerPC-corporate__text">トラストコーポレーション</p>
     </a>
+    <div>
+    <a class="c-footerPC-corporate__contactLink" href="https://trust-c-osaka.com/contact/" target="_blank" rel="noopener noreferrer">
+      <i class="fas fa-directions c-footerfooterPC-corporate__contactIcon"></i>
+    </a>
+      <p class="c-footerPC-corporate__contactText">お問い合わせ</p>
+      </div>
   </div>
 </footer>
 
 <footer  class="l-footerSP" id="footer">
-  <p class="c-footerSP-text">↓弊社概要は下記をクリック↓</p>
+  <p class="c-footerSP-corporate__text">↓弊社概要は下記をクリック↓</p>
   <a class="c-footerSP-corporate__link" href="https://trust-c-osaka.com/" target="_blank" rel="noopener noreferrer">
     <img src="<%= img_path %>img_ttj_banner.png" class="c-footerSP-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
+  </a>
+  <p class="c-footerSP-contact__text">↓お問い合わせ↓</p>
+  <a class="c-footerSP-contact__link" href="https://trust-c-osaka.com/contact/" target="_blank" rel="noopener noreferrer">
+    <i class="fas fa-directions c-footerSP-contact__linkIcon"></i>
   </a>
   <img src="<%= img_path %>logo_ttj.png" class="c-footerSP-company__logo" alt="フッターのロゴ画像">
   <small class="c-footerSP-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
