--- a/src/scss/object/component/_footer.scss
+++ b/src/scss/object/component/_footer.scss
@@ -1,4 +1,7 @@
 .c-footerPC-company {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   width: 100%;
   text-align: center;
 }
@@ -12,52 +15,77 @@
 
 .c-footerPC-corporate {
   width: 100%;
-  display: block;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
   margin-top: auto;
+  text-align: center;
 }
 
 .c-footerPC-corporate__link {
   width: 40%;
   display: block;
-  margin: 0 auto;
   text-align: center;
 
   &:hover {
-    .c-footerPC-corporate__linkText {
+    .c-footerPC-corporate__text {
       text-decoration: underline;
     }
   }
 }
 
-.c-footerPC-corporate__linkText {
+@mixin contactIcon($width, $height, $fontSize) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgba(152, 152, 152, 0.43);
+  width: $width;
+  height: $height;
+  font-size: $fontSize;
+  border-radius: 50%;
+  text-align: center;
+  background: linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
+  text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.66);
+  border-bottom: solid 3px #b5b5b5;
+  margin: 0 auto;
+
+  &:hover {
+    box-shadow: inset 0 1px 0 rgba(255,255,255,0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
+    border-bottom: none;
+  }
+}
+
+.c-footerPC-corporate__contactLink {
+  @include contactIcon($width: 60px, $height: 60px, $fontSize: 40px);
+}
+
+.c-footerPC-corporate__text,
+.c-footerPC-corporate__contactText {
   font-size: 12px;
-  display: inline;
+  display: inline-block;
+  white-space: nowrap;
 }
 
 /*
   以下：スマホ用
 ---------------------------------------------------- */
 
-.c-footerPCSP-text {
-  display: none;
-
-  @include mq('u-pc') {
-    display: block;
-  }
-}
-
-.c-footerSP-text {
+.c-footerSP-corporate__text {
   font-size: 16px;
   white-space: nowrap;
 }
 
 .c-footerSP-corporate__linkImg {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.c-footerSP-contact__link {
+  @include contactIcon($width: 80px, $height: 80px, $fontSize: 50px);
 }
 
 .c-footerSP-company__logo {
   width: 50%;
-  margin-bottom: 10px;
+  margin: 10px 0;
   filter: drop-shadow(10px 10px 10px $colorBlack); // オブジェクトの形に沿って影
 }
 
