--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -1,4 +1,4 @@
-<% var title = "Trust Tech Job"; var description = "Trust Tech Job"; %> <% include
+<% var title = "フリーランスエンジニアの案件探しなら - Trust Tech Job"; var description = "Trust Tech Job"; %> <% include
 src/ejs/template/_head %>
 
 <% var imgPath='/assets/images/'; %>
