--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -1,4 +1,4 @@
-<% var title = "フリーランスエンジニアの案件探しなら - Trust Tech Job"; var description = "Trust Tech Job"; %> <% include
+<% var title = "フリーランスエンジニア専門のエージェントなら - Trust Tech Job"; var description = "Trust Tech Job"; %> <% include
 src/ejs/template/_head %>
 
 <% var imgPath='/assets/images/'; %>
@@ -11,7 +11,7 @@ src/ejs/template/_head %>
         <div class="p-top-fixed__circle--LINE">
           <h3 class="p-top-fixed__catchPhrase"><span class="p-top-fixed__catchPhrase--bold">LINE</span>で<br>簡単登録</h3>
         </div><!-- /.p-top-fixed__circle -->
-        <img src="<%= imgPath %>logo_ttj.png" class="p-top-fixed__titleImg" alt="トラストのロゴ">
+        <img src="<%= imgPath %>logo_ttj.png" class="p-top-fixed__titleImg" alt="Trust Tech Job のロゴ">
         <div class="p-top-fixed__horizontal">
           <div class="p-top-fixed__circle--match">
             <h3 class="p-top-fixed__catchPhrase">希望案件<br>マッチ率<span class="p-top-fixed__catchPhrase--bold">97</span>％</h3>
@@ -256,7 +256,7 @@ src/ejs/template/_head %>
 
   <div class="p-top-entry">
     <div class="p-top-entry__mask">
-      <img src="<%= imgPath %>logo_ttj.png" class="p-top-entry__companyLogo" alt="サービス名のロゴ">
+      <img src="<%= imgPath %>logo_ttj.png" class="p-top-entry__companyLogo" alt="サービス名:Trust Tech Jobのロゴ">
       <p class="p-top-entry__text">
         まずはお気軽に、<br><span class="p-top-entry__text--line">LINE</span><br>にてご登録下さい！
       </p>
